--- a/services/data/pyproject.toml
+++ b/services/data/pyproject.toml
@@ -19,6 +19,7 @@ coverage = "^7.0.5"
 
 [tool.poetry.group.dev.dependencies]
 ipython = "^8.8.0"
+isort = "^5.11.4"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
