--- a/services/data/pyproject.toml
+++ b/services/data/pyproject.toml
@@ -9,6 +9,7 @@ python = "~3.9"
 xarray = "2022.10.0"
 netCDF4 = "1.6.1"
 zarr = "^2.13.6"
+boto3 = "^1.26.60"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.2.1"
