--- a/services/data/pyproject.toml
+++ b/services/data/pyproject.toml
@@ -10,6 +10,8 @@ xarray = "2022.10.0"
 netCDF4 = "1.6.1"
 zarr = "^2.13.6"
 boto3 = "^1.26.60"
+h5netcdf = "^1.1.0"
+scipy = "^1.10.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.2.1"
