--- a/services/api/pyproject.toml
+++ b/services/api/pyproject.toml
@@ -14,6 +14,7 @@ netCDF4 = "^1.6.1"
 xarray = "2022.10.0" # using 2022.11.0 caused numpy warnings
 fsspec = "^2022.10.0"
 s3fs = "^2022.10.0"
+zarr = "^2.13.6"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.2"
