--- a/.github/workflows/data.yaml
+++ b/.github/workflows/data.yaml
@@ -63,6 +63,8 @@ jobs:
         run: poetry run mypy src/
   test:
     runs-on: ubuntu-latest
+    permissions:
+      pull-requests: write
     steps:
       - uses: actions/checkout@v3
       - name: Install poetry
@@ -103,6 +105,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     needs: [lint, type-check, test]
+    permissions:
+      packages: write
     steps:
       - uses: actions/checkout@v3
       - name: Extract branch/tag name
