Don't deploy Dependabot's changes
They require extra permissions and aren't really needed - we can test
locally and the changes will be deployed once main is updated.

--- a/.github/workflows/ui.yaml
+++ b/.github/workflows/ui.yaml
@@ -123,6 +123,7 @@ jobs:
         with:
           sarif_file: 'trivy-results.sarif'
   deploy:
+    if: ${{ github.actor != "dependabot[bot]" }} # Don't deploy Dependabot changes
     runs-on: ubuntu-latest
     environment: vlab
     concurrency: vlab
