--- a/.github/workflows/data.yaml
+++ b/.github/workflows/data.yaml
@@ -148,6 +148,7 @@ jobs:
         with:
           sarif_file: 'trivy-results.sarif'
   deploy:
+    if: ${{ github.actor != "dependabot[bot]" }} # Don't deploy Dependabot changes
     runs-on: ubuntu-latest
     environment: vlab
     concurrency: vlab
