--- a/.github/workflows/ui.yaml
+++ b/.github/workflows/ui.yaml
@@ -123,7 +123,7 @@ jobs:
         with:
           sarif_file: 'trivy-results.sarif'
   deploy:
-    if: ${{ github.actor != "dependabot[bot]" }} # Don't deploy Dependabot changes
+    if: ${{ github.actor != 'dependabot[bot]' }} # Don't deploy Dependabot changes
     runs-on: ubuntu-latest
     environment: vlab
     concurrency: vlab
