--- a/services/api/pyproject.toml
+++ b/services/api/pyproject.toml
@@ -11,7 +11,7 @@ authors = [
 python = "^3.11"
 Flask = "^2.1.2"
 netCDF4 = "^1.6.1"
-xarray = "2022.10.0" # using 2022.11.0 caused numpy warnings
+xarray = "2022.10.0"  # Xarray > v2022.11 gives warnings about numpy array sizes changing. https://github.com/pydata/xarray/issues/7259
 fsspec = "^2022.10.0"
 s3fs = "^2022.10.0"
 zarr = "^2.13.6"
@@ -21,7 +21,7 @@ pytest = "^7.2"
 mypy = "^1.0"
 black = "^23.1.0"
 flake8 = "^6.0.0"
-coverage = "^6.4.4"
+coverage = "^7.1.0"
 isort = "^5.10.1"
 
 [build-system]
