--- a/services/api/package.json
+++ b/services/api/package.json
@@ -3,14 +3,18 @@
   "version": "0.0.1",
   "scripts": {
     "test": "echo 'No tests' && exit 1",
-    "lint": "prettier --check --plugin-search-dir=. . '!**/*.{min.js,json,html}'&& eslint . --ignore-pattern '**/*.min.js' --ignore-pattern '**/htmlcov/**' && stylelint src/**/*.css",
-    "format": "prettier --write --plugin-search-dir=. . '!**/*.{min.js,json,html}' && stylelint --fix src/**/*.css"
+    "lint": "prettier --check --plugin-search-dir=. . '!**/*.{min.js,json,html}' '!**/vendor/*' && eslint . --ignore-pattern '**/*.min.js' --ignore-pattern '**/htmlcov/**' --ignore-pattern '**/vendor/*' && stylelint src/**/*.css",
+    "format": "prettier --write --plugin-search-dir=. . '!**/*.{min.js,json,html}' '!**/vendor/*' && stylelint --fix src/**/*.css",
+    "vendor": "echo 'export * from \"d3\"' | rollup --plugin @rollup/plugin-node-resolve --file src/unified_graphics/static/js/vendor/d3.js --format es"
   },
   "devDependencies": {
+    "@rollup/plugin-node-resolve": "^15.0.1",
+    "d3": "^7.8.2",
     "del-cli": "^5.0.0",
     "eslint": "^8.35.0",
     "eslint-config-prettier": "^8.3.0",
     "prettier": "^2.8.4",
+    "rollup": "^3.18.0",
     "stylelint": "^14.8.2",
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-order": "^6.0.2",
