--- a/services/data/pyproject.toml
+++ b/services/data/pyproject.toml
@@ -12,6 +12,7 @@ zarr = "^2.14.1"
 boto3 = "^1.26.76"
 h5netcdf = "^1.1.0"
 scipy = "^1.10.0"
+fsspec = "^2023.3.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.2.1"
