--- a/services/api/package.json
+++ b/services/api/package.json
@@ -2,6 +2,8 @@
   "name": "ui",
   "version": "0.0.1",
   "scripts": {
+    "build": "postcss --use postcss-import --use cssnano --dir build/css/ --no-map src/unified_graphics/static/css/style.css",
+    "clean": "del build/",
     "test": "echo 'No tests' && exit 1",
     "lint": "prettier --check --plugin-search-dir=. . '!**/*.{min.js,json,html}' '!**/vendor/*' && eslint . --ignore-pattern '**/*.min.js' --ignore-pattern '**/htmlcov/**' --ignore-pattern '**/vendor/*' && stylelint src/**/*.css",
     "format": "prettier --write --plugin-search-dir=. . '!**/*.{min.js,json,html}' '!**/vendor/*' && stylelint --fix src/**/*.css",
@@ -9,10 +11,13 @@
   },
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^15.0.1",
+    "cssnano": "^5.1.15",
     "d3": "^7.8.2",
     "del-cli": "^5.0.0",
     "eslint": "^8.35.0",
     "eslint-config-prettier": "^8.3.0",
+    "postcss-cli": "^10.1.0",
+    "postcss-import": "^15.1.0",
     "prettier": "^2.8.4",
     "rollup": "^3.18.0",
     "stylelint": "^14.8.2",
