--- a/services/api/package.json
+++ b/services/api/package.json
@@ -2,7 +2,9 @@
   "name": "ui",
   "version": "0.0.1",
   "scripts": {
-    "build": "postcss --use postcss-import --use cssnano --dir build/css/ --no-map src/unified_graphics/static/css/style.css",
+    "build": "run-p build:*",
+    "build:css": "postcss --use postcss-import --use cssnano --dir build/css/ --no-map src/unified_graphics/static/css/style.css",
+    "build:js": "rollup src/unified_graphics/static/js/*.js --format es --dir build/js/",
     "clean": "del build/",
     "test": "echo 'No tests' && exit 1",
     "lint": "prettier --check --plugin-search-dir=. . '!**/*.{min.js,json,html}' '!**/vendor/*' && eslint . --ignore-pattern '**/*.min.js' --ignore-pattern '**/htmlcov/**' --ignore-pattern '**/vendor/*' && stylelint src/**/*.css",
@@ -16,6 +18,7 @@
     "del-cli": "^5.0.0",
     "eslint": "^8.35.0",
     "eslint-config-prettier": "^8.3.0",
+    "npm-run-all": "^4.1.5",
     "postcss-cli": "^10.1.0",
     "postcss-import": "^15.1.0",
     "prettier": "^2.8.4",
